--- a/zarf/k8s/kind/service-pod/kind-service-patch.yaml
+++ b/zarf/k8s/kind/service-pod/kind-service-patch.yaml
@@ -1,14 +1,12 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: service-system
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: service-pod
   namespace: service-system
 spec:
+  replicas: 1
+  strategy:
+    type: Recreate
   selector:
     matchLabels:
       app: service
@@ -17,9 +15,10 @@ spec:
       labels:
         app: service
     spec:
-      dnsPolicy: ClusterFirstWithHostNet
-      hostNetwork: true
-      terminationGracePeriodSeconds: 60
       containers:
         - name: service
-          image: service:1.0
+          resources:
+            limits:
+              cpu: "2000m"
+            requests:
+              cpu: "1000m"
