Start vendoring code and update service to be called rumor

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 *.dll
 *.so
 *.dylib
+*.o
+*.a
 
 # Test binary, built with `go test -c`
 *.test
@@ -16,5 +18,8 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-# Dependency directories (remove the comment below to include it)
-vendor/
+# Binaries
+app/services/rumor-api/rumor-api
+
+# Mac
+.DS_Store
