--- a/zarf/docker/Dockerfile
+++ b/zarf/docker/Dockerfile
@@ -1,12 +1,12 @@
 # Build the Go Binary
-FROM golang:1.17 as build_basic_service
+FROM golang:1.17 as build_rumor-api
 ENV CGO_ENABLED 0
 ARG BUILD_REF
 
 COPY . /service
 
-WORKDIR /service
-RUN go build -ldflags "-X main.build=${BUILD_REF}" -o ./service
+WORKDIR /service/app/services/rumor-api
+RUN go build -ldflags "-X main.build=${BUILD_REF}" -o ./rumor-api
 
 
 # Run the Go Binary
@@ -15,12 +15,14 @@ FROM alpine:3.15
 ARG BUILD_DATE
 ARG BUILD_REF
 
-COPY --from=build_basic_service /service /service
+COPY --from=build_rumor-api /service/app/services/rumor-api/rumor-api /service/rumor-api
 
 WORKDIR /service
-CMD ["./service"]
+CMD ["./rumor-api"]
 
 LABEL org.opencontainers.image.created="${BUILD_DATE}" \
-      org.opencontainers.image.title="service" \
+      org.opencontainers.image.title="rumor-api" \
       org.opencontainers.image.authors="Jan Duursma <me@janduursma.com>" \
-      org.opencontainers.image.revision="${BUILD_REF}"
+      org.opencontainers.image.source="https://github.com/janduursma/rumor-api/app/services/rumor-api" \
+      org.opencontainers.image.revision="${BUILD_REF}" \
+      org.opencontainers.image.vendor="Jan Duursma"
