--- a/zarf/k8s/base/rumor-pod/base-rumor.yaml
+++ b/zarf/k8s/base/rumor-pod/base-rumor.yaml
@@ -1,25 +1,25 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: service-system
+  name: rumor-system
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: service-pod
-  namespace: service-system
+  name: rumor-pod
+  namespace: rumor-system
 spec:
   selector:
     matchLabels:
-      app: service
+      app: rumor
   template:
     metadata:
       labels:
-        app: service
+        app: rumor
     spec:
       dnsPolicy: ClusterFirstWithHostNet
       hostNetwork: true
       terminationGracePeriodSeconds: 60
       containers:
-        - name: service
-          image: service:1.0
+        - name: rumor-api
+          image: rumor-api-image
