--- a/zarf/k8s/kind/rumor-pod/kind-rumor-patch.yaml
+++ b/zarf/k8s/kind/rumor-pod/kind-rumor-patch.yaml
@@ -1,22 +1,22 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: service-pod
-  namespace: service-system
+  name: rumor-pod
+  namespace: rumor-system
 spec:
   replicas: 1
   strategy:
     type: Recreate
   selector:
     matchLabels:
-      app: service
+      app: rumor
   template:
     metadata:
       labels:
-        app: service
+        app: rumor
     spec:
       containers:
-        - name: service
+        - name: rumor-api
           resources:
             limits:
               cpu: "2000m"
